--- a/msvc/plugin-mupen64plus.vcxproj.filters
+++ b/msvc/plugin-mupen64plus.vcxproj.filters
@@ -9,42 +9,45 @@
       <UniqueIdentifier>{142a5325-573c-4fde-9d8f-af10cb6e28e5}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe</Extensions>
     </Filter>
+    <Filter Include="Source Files\api">
+      <UniqueIdentifier>{363d4ce3-41b8-4b23-8739-7618a5da0345}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gfx_m64p.c">
+    <ClInclude Include="..\src\plugin\mupen64plus\api\m64p_common.h">
+      <Filter>Source Files\api</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\plugin\mupen64plus\api\m64p_config.h">
+      <Filter>Source Files\api</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\plugin\mupen64plus\api\m64p_plugin.h">
+      <Filter>Source Files\api</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\plugin\mupen64plus\api\m64p_types.h">
+      <Filter>Source Files\api</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\plugin\mupen64plus\api\m64p_vidext.h">
+      <Filter>Source Files\api</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\plugin\mupen64plus\gfx_m64p.h">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="msg.c">
+    </ClInclude>
+    <ClInclude Include="..\src\plugin\mupen64plus\screen.h">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="screen.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="plugin.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="api\m64p_config.h">
+    <ClCompile Include="..\src\plugin\mupen64plus\gfx_m64p.c">
       <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="api\m64p_plugin.h">
+    </ClCompile>
+    <ClCompile Include="..\src\plugin\mupen64plus\msg.c">
       <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="api\m64p_types.h">
+    </ClCompile>
+    <ClCompile Include="..\src\plugin\mupen64plus\plugin.c">
       <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="api\m64p_vidext.h">
+    </ClCompile>
+    <ClCompile Include="..\src\plugin\mupen64plus\screen.c">
       <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="gfx_m64p.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="screen.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="api\m64p_common.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
+    </ClCompile>
   </ItemGroup>
 </Project>
